<resources>
    <string name="app_name">MyMemory</string>
    <string name="bannerText">MyMemory</string>
    <string name="bannerDescription">To see and store your data</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="registerButton">Register User</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_address_title">Email Address:</string>
    <string name="full_name_title">Full Name:</string>
    <string name="age_title">Age:</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">RESET PASSWORD</string>
</resources>