<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/emailAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address_title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        app:layout_constraintLeft_toLeftOf="@+id/greeting"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTitle"
        app:layout_constraintLeft_toLeftOf="@+id/emailAddressTitle"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/fullNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name_title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/greeting"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTitle"
        app:layout_constraintLeft_toLeftOf="@+id/fullNameTitle"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintLeft_toLeftOf="@+id/greeting"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ageTitle"
        app:layout_constraintLeft_toLeftOf="@+id/ageTitle"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/sign_out"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>